--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			position="-1 4 0">
 		</a-entity>
 	-->
-	
+	<!--video/AB_DemoRoom.mp4?t={{timestamp}}-->
 
-	<a-videosphere src="video\AB_DemoRoom.mp4" autoplay loop radius="10" position="0 0 0"></a-videosphere>
+	<a-videosphere src="video\AB_DemoRoom.mp4?t={{timestamp}}" autoplay loop radius="10" position="0 0 0"></a-videosphere>
 
 	<a-sky 
 		color = "#001337">
