--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	-->
 	<!--video/AB_DemoRoom.mp4?t={{timestamp}}-->
 
-	<a-videosphere src="video\AB_DemoRoom.mp4?t={{timestamp}}" autoplay loop radius="10" position="0 6 0"></a-videosphere>
+	<!--<a-videosphere src="video\AB_DemoRoom.mp4?t={{timestamp}}" autoplay loop radius="10" position="0 6 0"></a-videosphere>-->
+	<a-videosphere src="video\AB_DemoRoom.mp4?t={{timestamp}}" autoplay loop></a-videosphere>
 
 	<a-sky 
 		color = "#001337">
