--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
 	-->
 	<!--video/AB_DemoRoom.mp4?t={{timestamp}}-->
 
-	<!--<a-videosphere src="video\AB_DemoRoom.mp4?t={{timestamp}}" autoplay loop radius="10" position="0 6 0"></a-videosphere>-->
-	<a-videosphere src="video\AB_DemoRoom.mp4?t={{timestamp}}" autoplay loop></a-videosphere>
-
-	<a-sky 
-		color = "#001337">
-	</a-sky>
+	<a-videosphere src="video\AB_DemoRoom.mp4?cb={{random}}" autoplay loop radius="5" position="0 6 0"></a-videosphere>
 
 	<a-plane
 		width="100" height="100"
@@ -39,50 +34,6 @@
 		color="#666666"
 		shadow="cast: false; receive: true">
 	</a-plane>
-
-	<a-torus-knot 
-		p="2" q="3" radius="0.5" radius-tubular="0.1"
-		position = "-2.5 1.5 -4"
-		color="#CC3333" 
-		shadow = "cast: true; receive: true">
-	</a-torus-knot>
-	
-	<a-box
-		width = "2" height = "1" depth = "1"
-		position = "-1 0.5 -3"
-		rotation = "0 45 0"  
-		color = "#FF8800"
-		shadow = "cast: true; receive: true">
-	</a-box>
-	
-	<a-sphere
-		radius = "1.25"
-		position = "0 1.25 -5"
-		color = "#DDBB00"
-		shadow = "cast: true; receive: true">
-	</a-sphere>
-	
-	<a-cylinder
-		radius = "0.5" height = "1.5"
-		position = " 1 0.75 -3"
-		color = "#008800" 
-		shadow = "cast: true; receive: true">
-	</a-cylinder>
-
-	<a-cone
-		radius-bottom = "1" radius-top = "0" height = "2"
-		position = "3 1 -4"
-		color = "#4444CC"
-		shadow = "cast: true; receive: true">
-	</a-cone>
-	
-	<a-torus 
-		radius="0.5" radius-tubular="0.1"
-		position = "2 3 -4"
-		rotation = "30 -20 0"
-		color="#8800FF"
-		shadow = "cast: true; receive: true">
-	</a-torus>
 
 </a-scene>
 
