--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<title>Hello, WebVR! - A-Frame</title>
-	<meta name="description" content="Hello, WebVR! - A-Frame">
+	<title>Arcade Britannia</title>
+	<meta name="Arcade Britannia VR" content="Arcade Britannia VR">
 	<script src="js/aframe-master-v1.3.0.min.js"></script>
 
 </head>
@@ -25,15 +25,7 @@
 	-->
 	<!--video/AB_DemoRoom.mp4?t={{timestamp}}-->
 
-	<a-videosphere src="video\AB_DemoRoom.mp4?cb={{random}}" autoplay loop radius="10" position="0 2 0"></a-videosphere>
-
-	<a-plane
-		width="100" height="100"
-		position=" 0.00 0.00 0.00" 
-		rotation="-90 0 0" 
-		color="#666666"
-		shadow="cast: false; receive: true">
-	</a-plane>
+	<a-videosphere src="video\AB_DemoRoom.mp4?cb={{random}}" autoplay loop radius="10" position="0 1 0"></a-videosphere>
 
 </a-scene>
 
